# FastAppDeployment

./: config.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: master_fastapp-deploy.yml
app/: services.py
app/assets/: grounded_chat.prompty  intent_mapping.prompty
