[project]
name = "fast-app-deploy"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "azure-ai-projects>=1.0.0",
    "fastapi-health>=0.4.0",
    "fastapi[standard]>=0.116.1",
    "langchain-openai>=0.3.28",
    "uvicorn>=0.35.0",
]
